...
        else { return }
        guard let placeHolder = UIImage(systemName: "person.crop.circle.fill")?.withTintColor(.ypGrey,renderingMode: .alwaysOriginal).withConfiguration(UIImage.SymbolConfiguration(pointSize: 70, weight: .regular, scale: .large)) else { return }
        view?.displayProfileImage(url: url, placeHolder: placeHolder)
    }
    
    func aproveLogout() -> UIAlertController{
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
        let alertActionYes = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            guard let self else { return }
            alert.dismiss(animated: true)
            self.profileLogoutService.logout()
            self.switchToSplashViewController()
        }
        let alertActionNo = UIAlertAction(title: "Нет", style: .default){_ in
...
