...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tabBar.accessibilityIdentifier = "TabBar"
        
        let imageListViewController = ImagesListViewController()
        let imageListPresenter = ImageListPresenter(imageListService: imageListService)
        imageListViewController.presenter = imageListPresenter
        imageListPresenter.view = imageListViewController
        
...
